reword instructions from 'clicking' to 'click'

--- a/deploy-microbosh-to-vsphere.html.md.erb
+++ b/deploy-microbosh-to-vsphere.html.md.erb
@@ -99,9 +99,9 @@ Client to create any missing resources listed below:
 
 1. Open [https://bosh.io/stemcells](https://bosh.io/stemcells) in a web browser
 to view a list of publicly available BOSH stemcells.
-The list displays the most recent builds of BOSH stemcell organized by operating system, target IaaS, and hypervisor.
+The list displays the most recent build numbers of BOSH stemcells, organized by operating system, target IaaS, and hypervisor.
 
-1. Download a BOSH stemcell for vSphere by clicking on its version number.
+1. Select a BOSH stemcell for vSphere and click the build number to download.
 
 ---
 ## <a id="deploy"></a>Step 4: Deploy MicroBOSH ##
