--- a/deploy-microbosh-to-openstack.html.md.erb
+++ b/deploy-microbosh-to-openstack.html.md.erb
@@ -286,10 +286,9 @@ Floating IP Address.
 
 1. Open [https://bosh.io/stemcells](https://bosh.io/stemcells) in a web browser
 to view a list of publicly available BOSH stemcells.
-The list displays the most recent builds of BOSH stemcell organized by operating
-system, target IaaS, and hypervisor.
+The list displays the most recent build numbers of BOSH stemcells, organized by operating system, target IaaS, and hypervisor.
 
-1. Download a BOSH stemcell for OpenStack by clicking on its version number.
+1. Select a BOSH stemcell for OpenStack and click the build number to download.
 
 ---
 ##<a id="deploy-microbosh"></a>Step 4: Deploy MicroBOSH ##
