change 'Select' to 'Choose' in deploy-microbosh-to-aws.html

--- a/deploy-microbosh-to-aws.html.md.erb
+++ b/deploy-microbosh-to-aws.html.md.erb
@@ -244,7 +244,7 @@ Your AWS credentials consist of an Access Key ID and a Secret Access Key. If you
 to view a list of publicly available BOSH stemcells.
 The list displays the most recent build numbers of BOSH stemcells, organized by operating system, target IaaS, and hypervisor.
 
-1. Select a BOSH stemcell for AWS and click the build number to download.
+1. Choose a BOSH stemcell for AWS and click the build number to download.
 
 ---
 ## <a id="deploy"></a> Step 4: Deploy MicroBOSH
