change 'Select' to 'Choose' in deploy-microbosh-to-openstack.html

--- a/deploy-microbosh-to-openstack.html.md.erb
+++ b/deploy-microbosh-to-openstack.html.md.erb
@@ -288,7 +288,7 @@ Floating IP Address.
 to view a list of publicly available BOSH stemcells.
 The list displays the most recent build numbers of BOSH stemcells, organized by operating system, target IaaS, and hypervisor.
 
-1. Select a BOSH stemcell for OpenStack and click the build number to download.
+1. Choose a BOSH stemcell for OpenStack and click the build number to download.
 
 ---
 ##<a id="deploy-microbosh"></a>Step 4: Deploy MicroBOSH ##
