--- a/deploy-microbosh-to-vsphere.html.md.erb
+++ b/deploy-microbosh-to-vsphere.html.md.erb
@@ -101,7 +101,7 @@ Client to create any missing resources listed below:
 to view a list of publicly available BOSH stemcells.
 The list displays the most recent build numbers of BOSH stemcells, organized by operating system, target IaaS, and hypervisor.
 
-1. Select a BOSH stemcell for vSphere and click the build number to download.
+1. Choose a BOSH stemcell for vSphere and click the build number to download.
 
 ---
 ## <a id="deploy"></a>Step 4: Deploy MicroBOSH ##
