Fixed ctl example
Use > instead of >> for pidfile creation

--- a/create-release.html.md.erb
+++ b/create-release.html.md.erb
@@ -132,7 +132,7 @@ case $1 in
     mkdir -p $RUN_DIR $LOG_DIR
     chown -R vcap:vcap $RUN_DIR $LOG_DIR
 
-    echo $$ >> $PIDFILE
+    echo $$ > $PIDFILE
 
     cd /var/vcap/packages/web_ui
 
