--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -31,9 +31,8 @@ title: Index
 ### Advanced BOSH configuration
 
  * [User management on the Director](director-users.html)
- * [Connecting the Director to an External Postgres Database](connect-postgres-hadb.html)
- * Deploying multi-VM BOSH
-    * Difference between Microbosh, BOSH, and multi-VM BOSH
+ * [Configuring the Director to use External Database](connect-postgres-hadb.html)
+ * Configuring the Director to use External Blobstore
 
 ---
 ## <a id="basic-deploy"></a> Using BOSH to deploy software
