--- a/bosh-components.html.md.erb
+++ b/bosh-components.html.md.erb
@@ -2,7 +2,7 @@
 title: BOSH Components
 ---
 
-Before bootstrapping a new BOSH environment we recommend to learn the names of major components that will be installed, used and configured:
+Before bootstrapping a new [environment](terminology.html#environment) we recommend to learn the names of major components that will be installed, used and configured:
 
 <%= image_tag("images/bosh-architecture.png") %><br />
 
