--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -16,7 +16,7 @@ title: Index
 ## <a id="install"></a> Installing BOSH
 
  * [BOSH components](bosh-components.html)
- * [Bootstrapping an environment / What is MicroBOSH?](bootstrap.html)
+ * [Bootstrapping an environment](bootstrap.html)
     * [On AWS](deploy-microbosh-to-aws.html)
        * CloudFormation template
     * [On OpenStack](deploy-microbosh-to-openstack.html)
