bosh-init beta section on the index

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -34,6 +34,18 @@ title: Index
  * [Configuring the Director to use External Database](connect-postgres-hadb.html)
  * Configuring the Director to use External Blobstore
 
+### Installing BOSH with bosh-init **[beta]**
+
+ * [Bootstrapping an environment](init.html)
+    * [On AWS](init-aws.html)
+    * On OpenStack
+    * On vSphere
+    * On vCloud
+    * [On Local machine using BOSH Lite](bosh-lite.html)
+ * bosh-init deploy step-by-step
+ * [Install bosh-init](install-bosh-init.html)
+ * [Using bosh-init](using-bosh-init.html)
+
 ---
 ## <a id="basic-deploy"></a> Using BOSH to deploy software
 
