--- a/install-bosh-init.html.md.erb
+++ b/install-bosh-init.html.md.erb
@@ -22,3 +22,6 @@ To make sure bosh-init is properly installed, check its version:
 <pre class="terminal">
 $ bosh-init -v
 </pre>
+
+---
+See [Using bosh-init](using-bosh-init.html) for details on how to use it.
