--- a/using-bosh-init.html.md.erb
+++ b/using-bosh-init.html.md.erb
@@ -4,7 +4,7 @@ title: Using bosh-init
 
 (See [Install bosh-init](install-bosh-init.html) to set up bosh-init on your machine.)
 
-bosh-init is used for creating and updating the Director (its VM and persistent disk) in an environment. To use bosh-init you need to create a deployment manifest that describes how to configure the Director. See [Bootstrapping an environment](bootstrap.html) for more details how to write a deployment manifest.
+bosh-init is used for creating and updating the Director (its VM and persistent disk) in an environment. To use bosh-init you need to create a deployment manifest that describes how to configure the Director. See [Bootstrapping an environment](init.html) for more details how to write a deployment manifest.
 
 ## <a id='deploy-cmd'></a> Deploy command
 
