--- a/init-aws.html.md.erb
+++ b/init-aws.html.md.erb
@@ -328,7 +328,7 @@ Your AWS credentials consist of an Access Key ID and a Secret Access Key. If you
 ---
 ## <a id="deploy"></a> Step 3: Deploy
 
-1. Install the [bosh-init (CLI)](./install-bosh-init.html).
+1. Install [bosh-init](./install-bosh-init.html).
 
 1. Run `bosh-init deploy ./bosh.yml` to start the deployment process.
 
