first pass at using bosh-init on openstack

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -38,7 +38,7 @@ title: Index
 
  * [Bootstrapping an environment](init.html)
     * [On AWS](init-aws.html)
-    * On OpenStack
+    * [On OpenStack](init-openstack.html)
     * On vSphere
     * On vCloud
     * [On Local machine using BOSH Lite](bosh-lite.html)
