--- a/init.html.md.erb
+++ b/init.html.md.erb
@@ -7,7 +7,7 @@ A single BOSH environment consists of the Director and deployments that it orche
 Depending on your IaaS, choose your next step:
 
 - [Initializing on AWS](init-aws.html)
-- Initializing on OpenStack
+- [Initializing on OpenStack](init-openstack.html)
 - Initializing on vSphere
 - Initializing on vCloud
 
