first pass at using bosh-init on vsphere

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -39,7 +39,7 @@ title: Index
  * [Bootstrapping an environment](init.html)
     * [On AWS](init-aws.html)
     * [On OpenStack](init-openstack.html)
-    * On vSphere
+    * [On vSphere](init-vsphere.html)
     * On vCloud
     * [On Local machine using BOSH Lite](bosh-lite.html)
  * bosh-init deploy step-by-step
