--- a/init.html.md.erb
+++ b/init.html.md.erb
@@ -8,7 +8,7 @@ Depending on your IaaS, choose your next step:
 
 - [Initializing on AWS](init-aws.html)
 - [Initializing on OpenStack](init-openstack.html)
-- Initializing on vSphere
+- [Initializing on vSphere](init-vsphere.html)
 - Initializing on vCloud
 
 We recommend that you update your BOSH environment frequently to stay on the latest version of BOSH.
