--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -40,7 +40,7 @@ title: Index
     * [On AWS](init-aws.html)
     * [On OpenStack](init-openstack.html)
     * [On vSphere](init-vsphere.html)
-    * On vCloud
+    * [On vCloud](init-vcloud.html)
     * [On Local machine using BOSH Lite](bosh-lite.html)
  * bosh-init deploy step-by-step
  * [Install bosh-init](install-bosh-init.html)
