--- a/init.html.md.erb
+++ b/init.html.md.erb
@@ -9,7 +9,7 @@ Depending on your IaaS, choose your next step:
 - [Initializing on AWS](init-aws.html)
 - [Initializing on OpenStack](init-openstack.html)
 - [Initializing on vSphere](init-vsphere.html)
-- Initializing on vCloud
+- [Initializing on vCloud](init-vcloud.html)
 
 We recommend that you update your BOSH environment frequently to stay on the latest version of BOSH.
 
